<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>zj_00_beginner</name>
	<version>0.0.0</version>
	<description>basic application exercises</description>
	<maintainer email="4a237051@stust.edu.tw">tsailichun</maintainer>
	<license>Apache License 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	
	<depend>rclcpp</depend>
	<depend>std_msgs</depend>
	<depend>example_interfaces</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
